--- a/src/components/pages/SignIn.css
+++ b/src/components/pages/SignIn.css
@@ -75,4 +75,20 @@
     background: #8b2d00;
     box-shadow: inset 0 0 0 10px #4d0000;
   }
+
+  .sign-up-link {
+    text-align: center;
+    margin-top: 15px;
+    color: #333;
+  }
+  
+  .sign-up-link a {
+    color: #8b2d00;
+    text-decoration: none;
+  }
+  
+  .sign-up-link a:hover {
+    text-decoration: underline;
+  }
+  
   
