--- a/src/pages/SignUp.css
+++ b/src/pages/SignUp.css
@@ -29,7 +29,7 @@
   }
   
   .form-field {
-    background-color: #8b2d00; 
+    background-color: #b06a32; 
     color: #ffffff; 
     width: 48%;
   }
