--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,8 @@
 /********** Template CSS **********/
 :root {
-    --primary: #FEA116;
-    --light: #F1F8FF;
-    --dark: #0F172B;
+    --primary: #870202;
+    --light: #f2b2b2;
+    --dark: #4d0000;
 }
 
 .fw-medium {
